--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <style>
 body {
-  margin: 0;
+  margin-top: 10px;
   padding: 0;
   font-size: 18px;
   color: var(--tg-theme-text-color);
@@ -62,7 +62,7 @@ body {
   /* New styles for the notification */
   position: absolute;
   top: 0;
-  right: 0;
+  right: 15px;
   background-color: red;
   color: white;
   padding: 4px 8px;
