--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ usercard.appendChild(p);
   mainButton.show();
   // and make it send the "foods" object (as JSON string) back to the backend
   mainButton.onClick(function(){
-    window.Telegram.WebApp.sendData(JSON.stringify(foods));
+    window.Telegram.WebApp.sendData(("data sent"));
   })
 });
     
